feat(project-service): add task dependency management with predecessors
**Changes:**
- Add REST endpoints for managing task predecessors (add, remove, update)
- Implement project date recalculation endpoint based on task dependencies
- Update task update endpoint to handle predecessor relationships
- Change ProjectDTO date fields from LocalDate to String for ISO format
- Add TaskDTO predecessorIds field support
- Enable MapStruct verbose mode in Maven compiler configuration
- Add CSS styling for task status badges and dependency visualization

This enables users to define task dependencies and automatically recalculate project timelines based on task relationships and constraints.

--- a/backend/project-service/pom.xml
+++ b/backend/project-service/pom.xml
@@ -115,6 +115,10 @@
                         <version>0.2.0</version>
                     </path>
                 </annotationProcessorPaths>
+                <!-- (Optionnel) Activer le mode verbeux -->
+                <compilerArgs>
+                    <arg>-Amapstruct.verbose=true</arg>
+                </compilerArgs>
             </configuration>
         </plugin>
 
